fix: fix modal header selection issue where white text is not visible in some configurations

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -707,9 +707,11 @@
 			}
 
 			select {
-				background-color: transparent;
+				// background-color: transparent;
+				// color: white;
 				outline: none;
-				color: white;
+				border-radius: 4px;
+				padding-right: 2rem;
 			}
 		}
 
